# pims-photo-organizer

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: PROJECT_STATUS_AND_ROADMAP.md
docs/superpowers/plans/: 2026-06-13-dual-engine-backend-foundation.md  2026-06-13-dual-engine-review-operations.md  2026-06-13-dual-engine-workflow-batch-execution.md  (+1 more)
scripts/: run_full_detection.ps1
src/pims_v1/: cli.py  config.py  db.py  main.py
tests/: test_ai_naming_service.py  test_api_session_lifecycle.py  test_app.py  test_archive_decision_service.py  test_archive_rule_planner.py  test_archive_rule_planner_structured.py  test_archive_service.py  test_backup_service.py  test_cli.py  test_config.py  test_db.py  test_deepseek_client.py  test_delete_service.py  test_dependencies.py  test_duplicate_index_service.py  test_duplicate_service.py  test_grouping_service.py  test_hash_index_service.py  test_index_service.py  test_metadata_and_hashing.py  test_notification_service.py  test_operation_plan_service.py  test_phash_index_service.py  test_review_routes.py  test_review_service.py  test_review_service_rule_plan.py  test_run_full_detection_script.py  test_runner_script.py  test_safe_workflow_service.py  test_scan_service.py  test_schema.py  test_series_confirm_service.py  test_series_index_service.py  test_series_moderation_service.py  test_similar_index_service.py  test_status_service.py  test_task_recovery.py  test_task_routes.py  test_task_worker_service.py  test_thumbnail_service.py  (+2 more)
transfer-snapshots/20260617-235043/: README.md  SHA256SUMS.txt
(+57 files in other folders)
